--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -113,7 +113,7 @@ Note: This table shows the High-risk Index (HRI) for ABC. A score of 11 or more 
 
 \noindent \textbf{[JJH: Put in footnote at Base of 3/4.] [JLG: If we do that, then the figure looks very small and it is much harder to read. I can still compress the figures if you want the notes at the base.]}
 
-\noindent \textbf{[JJH: Jorge - in text we sat 120] [JLG: Let me clarify the relationship between the initial 120, the 112 that appear in the Figure A.3, and the 111 that we report as ``final sample.'']}
+\noindent \textbf{[JJH: Jorge - in text we sat 120] [JLG: Initially, there were 120 families (123 subjects). After removing 2 subjects who were mentally disabled (rows 18 and 19 of Table A.2), 4 subjects who left the study (rows 1 through 4 of Table A.2), and 3 subjects who died before 6 months (rows 5 through 7 of Table A.2), there are 114 subjects from 112 families who are considered part of the initial sample. We used to say that we had an initial sample of 111 subjects. We updated the initial sample to reflect what we do in the data. This error is not in the gender differences paper, but was in its appendix. We corrected the appendix so that there are no mentions of 111 subjects.]}
 
 \noindent \textbf{Details on Figure~\ref{fig:abc-flow}:} Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1977_AJMD,Ramey_Campbell_1979_SR,Ramey_Campbell_1984_AJMD}, internal documentation of the program, and own calculations. Note: The variable $R$ represents randomization into treatment, $[R=1]$, or control, $[R=0]$, groups. After the original randomization, some subjects died or withdrew from the program early in life and were replaced. $R$ also includes those replacements. Arrows pointing outside of the diagram indicate subjects who left the study permanently. The variable $D$ represents participation in the preschool-age program. The variable $SR$ represents randomization into the \textit{school-age} program, $[SR=1]$, or out of it, $[SR=0]$. Some subjects were not randomized at school age, $[SR=No]$. We use the term ``temporarily attrited" for subjects who did not participate in the study at school age, but were later interviewed in the age-21 followup. 
 
@@ -144,7 +144,7 @@ Note: This table shows the High-risk Index (HRI) for ABC. A score of 11 or more 
 
 \noindent Analysis of each of these cases leads to the following conclusions. For four subjects, we do not have data to assess them as cases of program attrition, though sensitivity analyses suggest that the treatment effects of the program persist after assigning them the same outcome as the subjects who did the worst in the treatment group. For the subjects who did not comply with treatment, adjusting our estimates for non-compliance when data are available makes little difference. The remaining 14 subjects who did not complete treatment as initially assigned represent various cases of program attrition, for which we propose a correction methodology in Appendix~\ref{app:method_partialobs}.
 
-\noindent To increase the number of subjects in the sample, the program officers recruited additional subjects who were added to the program before the subjects were 6 months old. Our calculations indicate that there were eight replacements. We cannot distinguish in the data the subjects who were initially randomized from the replacement children and there is no documentation on how these subjects were recruited.\footnote{Three replacements are reported in \citet{Ramey_Campbell_1979_SR}. Three are documented in correspondence with the program officers, which is available from the authors upon request. The other two replacements are implied by the number of subjects who participated in the randomization protocol in each cohort.} After the various compromises, the sample consisted of 111 subjects: 53 in the treatment group and 58 in the control group. The observed characteristics for each subjects indicate that they were eligible for the program; all subjects in the sample have an HRI of 11 or above. 
+\noindent To increase the number of subjects in the sample, the program officers recruited additional subjects who were added to the program before the subjects were 6 months old. Our calculations indicate that there were eight replacements. We cannot distinguish in the data the subjects who were initially randomized from the replacement children and there is no documentation on how these subjects were recruited.\footnote{Three replacements are reported in \citet{Ramey_Campbell_1979_SR}. Three are documented in correspondence with the program officers, which is available from the authors upon request. The other two replacements are implied by the number of subjects who participated in the randomization protocol in each cohort.} After the various compromises, the sample consisted of 114 subjects: 58 in the treatment group and 56 in the control group. The observed characteristics for each subjects indicate that they were eligible for the program; all subjects in the sample have an HRI of 11 or above. 
 
 \noindent Prior to the second phase of randomization, 3 subjects in the first-phase control group and 3 subjects in the first-phase treatment group could not be located for follow-up. One subject in the control group and eight subjects in the treatment group of the first phase did not participate in the second phase but later agreed to participate in the data collections during adulthood. This yields a sample of 96 subjects in the second phase: 49 in treatment and 47 in control. After the second-phase randomization, three subjects in the treatment group chose not to participate in the program, while all subjects in the control group adhered to their randomization status. 
 
