--- a/abc_comprehensivecba_answerstoreferees.tex
+++ b/abc_comprehensivecba_answerstoreferees.tex
@@ -15,8 +15,8 @@
 \newcommand{\notorth}{\ensuremath{\perp\!\!\!\!\!\!\diagup\!\!\!\!\!\!\perp}}%
 \newcommand{\notindep}{\notorth}
 
-\externaldocument{abc_comprehensivecba_appendix-pub_revised}
-\externaldocument{abc_comprehensivecba_revised}
+\externaldocument{abc_comprehensivecba_appendix-pub_2018-07-10b_jlg}
+\externaldocument{abc_comprehensivecba_revised_2018-07-10b_jlg}
 \doublespacing
 
 \begin{document}
@@ -85,13 +85,13 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textit{Response.} We now thoroughly discuss this point in Section~\ref{section:cbamethodology}, where we detail the construction of our synthetic cohorts. As you point out, it makes more sense to construct one synthetic control group and one synthetic treatment group for doing the analysis across all of the outcomes. That is what we do.
 
-\noindent \textbf{Editor. Connected to that: I found assumption A-1 on pg.\ 18 mystifying. It may actually be unfortunate that you ``suppress individual i subscripts'' to ``avoid notational clutter'', as you state on p. 16. I thought that the explanation on pg.\ 15 and (3) meant, that you take each individual of your actual sample and ``match him/her'' up with someone in the auxiliary sample, who has the exact same vector of characteristics Y until age a* (which then raises a bunch of questions: what, if there are many in the artificial data that do the trick? What, if there are none?). So, you then would have an auxiliary sample, that looks like your experimental sample, but where you can observe everything until the end of their lives. If that is what you do, then A-1 is not an assumption: it is a definition of the auxiliary sample.}
+\noindent \textbf{Editor. Connected to that: I found assumption Assumption~\ref{ass:summary} on pg.\ 18 mystifying. It may actually be unfortunate that you ``suppress individual i subscripts'' to ``avoid notational clutter'', as you state on p. 16. I thought that the explanation on pg.\ 15 and (3) meant, that you take each individual of your actual sample and ``match him/her'' up with someone in the auxiliary sample, who has the exact same vector of characteristics Y until age a* (which then raises a bunch of questions: what, if there are many in the artificial data that do the trick? What, if there are none?). So, you then would have an auxiliary sample, that looks like your experimental sample, but where you can observe everything until the end of their lives. If that is what you do, then \ref{ass:summary} is not an assumption: it is a definition of the auxiliary sample.}
 
-\noindent \textit{Response.} We have rewritten Section~\ref{section:cbamethodology}. We apologize for the confusing exposition in the previous draft. Our procedure is now discussed in greater detail. We have removed old Assumption A-1 in the last version of the paper because it was not even necessary. We now note that in our main approach we do not match individual to individual across experimental and non-experimental samples. Instead, we construct synthetic treatment and control groups and estimate structural relationships. What matters is the structural relationships that we are able to identify and estimate in the non-experimental samples, but not the outcomes themselves. For this, Assumption A-1 was confusing and we have restated all our assumptions in terms of these structural relationships. In a second approach, we match individuals.
+\noindent \textit{Response.} We have rewritten Section~\ref{section:cbamethodology}. We apologize for the confusing exposition in the previous draft. Our procedure is now discussed in greater detail. We have removed old Assumption~\ref{ass:summary} in the previous version of the paper because it was not even necessary. We now note that in our main approach we do not match individual to individual across experimental and non-experimental samples. Instead, we construct synthetic treatment and control groups and estimate structural relationships. What matters is the structural relationships that we are able to identify and estimate in the non-experimental samples, but not the outcomes themselves. For this, Assumption~\ref{ass:summary} was confusing and we have restated all our assumptions in terms of these structural relationships. In a second approach, we match individuals.
 
-\noindent \textbf{And if that is not the definition, then exactly what is the definition? In any case, assumption A-2 on p.21 states some support condition. It would seem to me that this is a necessary condition to even construct the auxiliary sample, as defined by ``assumption'' A-1. Perhaps you mean something else, but this should all be crystal clear. Moreover, the selection of variables is really key. Suppose you include cohort information in the regressors in (1): then, assumption A-2 would be impossible to satisfy. There is too much crucial information here, swept under the rug of apparently clean formalism.}
+\noindent \textbf{And if that is not the definition, then exactly what is the definition? In any case, assumption A-2 on p.21 states some support condition. It would seem to me that this is a necessary condition to even construct the auxiliary sample, as defined by ``assumption''~\ref{ass:summary}. Perhaps you mean something else, but this should all be crystal clear. Moreover, the selection of variables is really key. Suppose you include cohort information in the regressors in (1): then, assumption A-2 would be impossible to satisfy. There is too much crucial information here, swept under the rug of apparently clean formalism.}
 
-\noindent \textit{Response.} The selection of variables is in fact key, and we now have generated two subsections to discuss this and explain how we put it in practice. These are in Section~\ref{section:cbamethodology}. We also explicitly discuss the support conditions in Assumption~\ref{ass:exog}.
+\noindent \textit{Response.} The selection of variables is in fact key, and we now have generated two subsections to discuss this and explain how we put it in practice. These are in Section~\ref{section:cbamethodology}. We also explicitly discuss the support conditions in Assumption~\ref{ass:contain}.
 
 \noindent \textbf{Editor. A key concern that I do not see discussed early on and with great care is that ``different times are different''. Suppose, say, that Y contains labor income, measured in year-2000 dollars. Suppose I wanted to use your methodology to also say something about great-great-grandkids, and therefore tried to find a matching sample of people, where I have data for their next four generations. I probably would have to go back more than 100 years. But then someone with the labor income of a contemporary lower middle class person would be considered filthy rich back then! They surely wouldn't be comparable! The issue may be less pronounced here, since the difference in birth year is perhaps just 20 or 30 years (how much, actually?), but still. You might be able to finesse this by just looking at income growth rates (since, once again, we are ultimately only interested in the difference between the treated and the non-treated groups). But still, one might need to worry about ``macro developments'' here. Crime rates may have changed. Female labor force participation, divorce rates, unemployment rates: they all changed. Perhaps, the identifying assumption here is that these affected the treated and non-treated groups the same, so that these macro effects disappear, once differencing or so. But shouldn't that be clearly spelled out and clearly argued? You ``hide'' all that with ``Condition C-1'', but as I just described with my great-great- grandkids example, this can be a pretty ridiculous condition for certain lists of outcomes. The selection of outcomes (e.g.: level of income or growth of income or income relative to the average U.S. income?) is really key! Don't hide that behind too much formalism, discuss this clearly and upfront. At this point, it is hard to be convinced that what you do is legit.}
 
@@ -99,7 +99,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor. Is it really true that you can get by with (6)? If you want to match individual-by-individual (as described in my main comment 4 above), might we want to condition also on outcomes up to age a*? Perhaps I am misunderstanding that condition, since you also state something about X potentially containing lagged variables. You weren't all that clear on this before (see p. 19, top), and this now comes back to haunt me in understanding what it is you do. This needs clarification.}
 
-\noindent \textit{Response.} We apologize for this source of confusion. We now clarify this point in the text and in this response. In Equation~\eqref{eq:outcome} we define what the relationship between the outcomes of interest $Y_{k,a}^d$ and two \text{different} types of predictors: (i) $\bm{B}_k$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment (what you call outcomes up to age a). The key assumption for obtaining our forecasts is that the treatment effects are generated by changes in $\bm{X}_{k,a}^d$ through a policy-invariant production function. Recall that in our main analyses we do not match individual-to-individual. Instead, we want to create comparable samples to treatment and control in the auxiliary samples. These points are now clearly discussed in the list of steps in Section~\ref{section:cbamethodology}. However, we also discuss a matching procedure. 
+\noindent \textit{Response.} We apologize for this source of confusion. We now clarify this point in the text and in this response. In Equation~\eqref{eq:outcome} we define what the relationship between the outcomes of interest $Y_{k,a}^d$ and two \text{different} types of predictors: (i) $\bm{B}_k$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment (what you call outcomes up to age a). The key assumption for obtaining our forecasts is that the treatment effects are generated by changes in $\bm{X}_{k,a}^d$ through a policy-invariant production function. Recall that in our main analyses we do not match individual-to-individual. Instead, we want to create comparable samples to treatment and control in the auxiliary samples. These points are now clearly discussed in the list of steps in Section~\ref{section:cbamethodology}. However, we also discuss an explicit matching procedure as an alternative valid nonparametric approach under exogeneity.
 
 \noindent \textbf{Editor. Cut figure 2: TMI. This is technical appendix material. Key results ``in print'' only, please.}
 
@@ -174,7 +174,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textit{Response.} The explanation that we gave in our submitted paper failed to communicate why the fact that the constructed profiles match is important. To explain this, we refer to the recipe that we provide in Section~\ref{section:cbamethodology}. The first matching obtains samples that resemble our treatment and control groups at baseline. This is how we construct synthetic cohorts. They are people sampled from the same set $\bm{B}_o$. We later use matching on baseline variable and on $\bm{X}_{d,a}^d$ to identify and estimate structural relationships and form a forecast. The reason why Figure~\ref{figure:controltests} is compelling is because in the auxiliary sample there is no treatment at all (everyone who satisfies $\bm{B} \in \mathcal{B}_0$ is observationally equivalent to a control-group child). Thus, our forecast for the average profile for the control group should be the same as the average profile for people who satisfy $\bm{B} \in \mathcal{B}_0$ in the auxiliary sample. We now state this more clearly in Section~\ref{section:cbamethodology}.
 
-\noindent \textbf{Editor. On pg.\ 20 and just above Assumption A-1, Y now suddenly has five subscripts, when it only had three before, and the common subscripts are in a different order. I find that confusing. You then get to equation (3), and now there are four subscripts. This is not a compromise: this is even more confusing.}
+\noindent \textbf{Editor. On pg.\ 20 and just above Assumption~\ref{ass:summary}, Y now suddenly has five subscripts, when it only had three before, and the common subscripts are in a different order. I find that confusing. You then get to equation (3), and now there are four subscripts. This is not a compromise: this is even more confusing.}
 
 \noindent \textit{Response.} We now only keep subscripts for what is relevant to our methodology: treatment status, experimental and non-experimental samples, and age. The rest are gone, and using them was confusing.
 
@@ -188,7 +188,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor. Is, say, pg.\ 29 a verbal description of what you described more formally above? Something else? How do the two relate? And what do you do, exactly? For example, the paragraph ``Our methodology...'' on pg.\ 29 needs a more precise fleshing out in the technical appendix, and you should point to that in the main text.}
 
-\noindent \textit{Response.} As we clarify in the text now, forecasting the outcomes other than labor income relies on similar assumptions with some additional steps. We provide brief details in Section~\ref{section:cbapractice} for each of these outcomes and then refer to the reader to each of the relevant appendices (there is one appendix for each outcome, including labor income).
+\noindent \textit{Response.} As we clarify in the text now, forecasting the outcomes other than labor income relies on similar assumptions with some additional steps which we document. We provide brief details in Section~\ref{section:cbapractice} for each of these outcomes and then refer to the reader to each of the relevant appendices (there is one appendix for each outcome, including labor income).
 
 \section*{Comments of Reviewer 1}
 
@@ -198,7 +198,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Referee 1. Second, this paper unduly relies on citation of the authors' own unpublished analyses and sometimes the unpublished work of others. This is not necessary in most cases. The authors fail to cite in the appropriate locations the peer-reviewed publication(s) that make(s) the same point about many foundational issues, such as the study's original design and prior seminal findings. For example, the fact that the children in the control condition were not prevented from attending center-based childcare in the community appears in major prior articles and the benefits of this intermediate, non-randomized treatment ``substitute" has been effectively documented (notably, \citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}). Why would the authors cite an unpublished source of their own (specifically, \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}, unpublished) for this fact? Actually, the \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} is cited so often that one wonders how much it overlaps with this paper and what is needed from that not readily available paper to understand this current paper? This strongly detracts from the current paper.}
 
-\noindent \textit{Response.} This point is very well taken and we made an effort to: (i) cite \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} only when necessary (it is now \citet{Garcia_Heckman_Ziff_2018_EER} and it is forthcoming). Before, it was cited over 10 times. Now, it is cited in the introduction once to state the difference between that paper and this paper per the editor's request (we downweighted it considerably). We concretely point to some results and references from that paper that are useful here; and (ii) rely on sources that are primary to the facts that we intend to document or refer to. Examples of these appear mostly when we discuss the content of the program in Section~\ref{section:background}. We refer to:
+\noindent \textit{Response.} This point is very well taken and we made an effort to: (i) cite \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} only when necessary (it is now \citet{Garcia_Heckman_Ziff_2018_EER} and it is forthcoming). Before, it was cited over 10 times. It is now cited in the introduction once to state the difference between that paper and this paper per the editor's request (we downweight citation to it considerably). We concretely point to some results and references from that paper that are useful here; and (ii) rely on sources that are primary to the facts that we intend to document or refer to. Examples of these appear mostly when we discuss the content of the program in Section~\ref{section:background}. We refer to:
 
 \begin{enumerate}
 \item \citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev} and other contemporaneous sources when discussing the take-up of alternative childcare arrangements by the control group.
@@ -216,7 +216,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Referee 1. Closely related is that earlier reports sometimes appear at odds with the assumptions and perhaps the data incorporated into this new, expansive economic analysis. A prime example is that there were no significant effects on earnings or crime at age 30 of the original treatment, at least as previously analyzed. This should not be ignored -and if differences occur, the authors should offer reasons for these discrepancies.}
 
-\noindent \textit{Response.} The source of the difference in outcomes arises from our access to richer data at later stages of the life cycle than were previously available, and we now cite them. We speculate that the other assumptions that we make have to do with the fact that we assume that (i) once treatment is offered, all of the families agree to participate of the program; (ii) once randomized into treatment, there is full compliance.
+\noindent \textit{Response.} The source of the difference in outcomes arises from our access to richer data at later stages of the life cycle than were previously available, and we now discuss this point at several places in the text. We speculate that the other assumptions that we make have to do with the fact that we assume that (i) once treatment is offered, all of the families agree to participate of the program; (ii) once randomized into treatment, there is full compliance.
 
 \noindent We believe that the work that we have done to document the randomization protocol and the sample of participants is novel in its thorough detail. Previous sources have dismissed the validity of the randomization protocol without knowledge of the causes behind why different individuals attrite from the sample as the data collection process evolved \citep[e.g.][]{Whitehurst_2014_Senate_Testimony}. While presenting all this would provide too much detail for our main text, Appendix~\ref{appendix:background} explain the sources of attrition and missing data in great detail. Instead of assuming that the sample is not useful, we went back to the original program designers and files and found out that attrition is actually not a serious concern for the reasons that we state in Appendix~\ref{appendix:background}. For ABC, for which validity has been questioned, we argue that our assumptions are sound because most cases of non-compliance were unrelated actions to the program implementers or to household decisions. We elaborate on how we deal with attrition and missing data in Appendix~\ref{appendix:background}  and summarize next:
 
@@ -238,17 +238,17 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Referee 1. Finally, the paper lacks a much-needed section on limits and a contextual interpretation of these two studies. The projects occurred in a small university town that had high income, high education families and a school system deemed excellent by almost all parameters. Further, the proportion of minority and low-income families was very low, as noted in many prior publications about these studies. More importantly for a lifetime analysis, most of these study participants remained nearby and the Research Triangle Park has many job opportunities, at all levels, thus increasing employment opportunities - probably for both groups of study participants. Thus, although many of these findings may generalize, they need to be contextualized for cohort and geography. Another issue is that the gender differences that favor males in one way, but females in another way warrant greater discussion. These cannot be disaggregated from complex U.S. issues around race and gender, expectations, racism, opportunities, etc. A thoughtful mention of this will much improve the contribution of this important paper.}
 
-\noindent \textit{Response.} Our summary, Section~\ref{section:conclusion}, is now devoted to briefly summarizing and qualifying its findings. We explicitly warn against uncritical application of our findings.
+\noindent \textit{Response.} Our summary, Section~\ref{section:conclusion}, is now devoted to briefly summarizing and qualifying its findings. We explicitly warn against uncritical application of our findings, but point out that similar programs are in place for similar populations.
 
 \section*{Comments of Reviewer 3}
 
 \noindent \textbf{Referee 3. The goal of the paper is to perform a comprehensive evaluation of an early childhood program (ACB/CARE). The evaluation is comprehensive in several ways: (i) It includes a wide range of outcomes; (ii) It forecasts and monetizes the effects on these outcomes over the life-cycle, to estimate rates of returns and compare benefits to costs; and (iii) It tries to account for both the sampling error in the experimental and auxiliary samples and the forecast error due to the interpolation and extrapolation. If I understand correctly, i) is already done in a separate paper \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}. What's new in this paper is ii) and iii), both of which are challenging tasks but potentially quite useful for program evaluation.}
 
-\noindent \textit{Response.} That is exactly right. In our companion paper, \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} (now \citet{Garcia_Heckman_Ziff_2018_EER} forthcoming), we providemore conventional analysis of treatment effects on multiple outcomes, focusing on gender differences, and offer some important innovations. For example, the use of administrative crime data at age 30. Our paper intends to map these treatment effects into life-cycle measures of social efficiency.
+\noindent \textit{Response.} That is exactly right. In our companion paper, \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} (now \citet{Garcia_Heckman_Ziff_2018_EER} forthcoming), we provide more conventional analyses of treatment effects on multiple outcomes, focusing on gender differences, and offer some important innovations, for example, the use of administrative crime data at age 30. Our paper intends to map these treatment effects into life-cycle measures of social efficiency.
 
 \noindent \textbf{Referee 3. The paper is extraordinarily long, in total 350 pgs.\ including appendices. There are numerous long footnotes. I never refereed anything like this paper. I spent several days on the manuscript and I still don't understand what exactly is being done.}
 
-\noindent \textit{Response.} We cannot avoid the fact that the paper is very long because there is a lot empirical analysis that we need to document given the nature of the paper. However, we have tried to make the paper much more concrete, using a lot of your feedback. In summary: (i) we briefly introduce the issue and illustrated with labor income, which is the workhorse example in what remains of the paper; (ii) provide a background and data section; and (iii) and then head directly to the forecast of the paper. We provide a recipe of the exact steps that we follow, in the hope that the reader can understand exactly what is being done. In that case, the Appendix could become simply a means for consulting details, instead of explicit content that the reader needs to understand (which we agree neither is practical nor realistic). We hope that readers with different interests are able to consult different sections of the appendix.
+\noindent \textit{Response.} We cannot avoid the fact that the paper is very long because there is a lot of supporting empirical analyses that we need to to give credibility to the paper. However, we have tried to make the paper much more concrete, using a lot of your feedback. In summary: (i) we briefly introduce the issue and illustrated with labor income, which is the workhorse example in what remains of the paper; (ii) provide a background and data section; and (iii) and then head directly to the forecast of the paper. We provide a recipe of the exact steps that we follow, in the hope that the reader can understand exactly what is being done. In that case, the Appendix could become simply a means for consulting details, instead of explicit content that the reader needs to understand (which we agree neither is practical nor realistic). We hope that readers with different interests are able to consult different sections of the appendix.
 
 \noindent \textbf{Referee 3. The body of the paper is far from self-contained; it is necessary to read the many appendices (and footnotes) to understand what the authors actually do, how the various procedures perform, etc. Indeed, most of the substance is in the appendices. The body of the paper actually reads a bit like a very long introduction/summary of what the authors do and what they found.}
 
@@ -270,23 +270,23 @@ same (if possible: is it? Comment on that!).}
  
 \noindent \textbf{If the paper is supposed to be a template, what should the researcher do if she rejects a given assumption, such as exogeneity or structural invariance? This seems like a likely event given the strong assumptions. Is it possible to make progress under alternative or weaker assumptions?}
 
-\noindent \textit{Response.} Yes. It is possible to proceed under weaker assumptions, if the only object to forecast is the mean difference between the treatment and control. This weaker condition is provided in Equation~\eqref{eq:nec}. We do note, however, that the stronger assumptions give us sharper testable implications that the researcher is able to obtain. Mean independence allows us to derive the implications in Equations~\eqref{eq:suff1} and~\eqref{eq:suff2} and provide the tests in Figures~\ref{fig:labor-income-profiles} and~\ref{figure:controltests}. This would not be possible if Equation~\eqref{eq:nec} were the only implication. We have tried to be cautious about the important point that failure to reject is not tantamount to the truth of the null - it is just consistent with it.
+\noindent \textit{Response.} Yes. It is possible to proceed under weaker assumptions, if the only object to forecast is the mean difference between the treatment and control. This weaker condition is provided in Equation~\eqref{eq:nec}. We note, however, that the stronger assumptions give us sharper testable implications that the researcher is able to obtain. Mean independence allows us to derive the implications in Equations~\eqref{eq:suff1} and~\eqref{eq:suff2} and provide the tests in Figures~\ref{fig:labor-income-profiles} and~\ref{figure:controltests}. This would not be possible if Equation~\eqref{eq:nec} were the only implication. We have tried to be cautious about the important point that failure to reject is not tantamount to the truth of the null - it is just consistent with it.
 
 \noindent \textbf{In the body of the paper, the authors consistently argue that they test and do not reject the assumptions they make. Looking at the appendices, this seems to be true in many but not all cases. Also, in some of the cases it is true, the sampling error is significant and one cannot say much about the testable implications. The authors should be clear about this.}
 
-\noindent \textit{Response.} This is a good point. We want to offer our methodology as a template for the evaluation of other programs. A major part of Section~\ref{section:cbamethodology} is actually now devoted to justifying the use of $\bm{\phi}$ as a means of forecasting. The justification relies on the testable implications encapsulated in Equations~\eqref{eq:suff1} and~\eqref{eq:suff2}. As you point out in your report, a lot of relevant material used to justify this was left in the Appendix in the previous version of the paper. In this paper, we discuss the tests of these implications in Tables~\ref{table:invariance} and~\ref{table:invarianceerrors}. We also elaborate the magnitudes and the standard errors of the tests. The tests are not as precise as in Panel (a), but, as before, the coefficients associated with the relevant indicator are relatively low if compared with the average of the variable (average labor income in the experimental and non-experimental sample for males and females is $40,007$ and $24,584$ and  $32,717$ and $24,098$, respectively). Similar statements would hold for the complementary tests in Appendix~\ref{appendix:methodology}.
+\noindent \textit{Response.} This is a good point. We want to offer our methodology as a template for the evaluation of other programs. A major part of Section~\ref{section:cbamethodology} is actually now devoted to justifying the use of $\bm{\phi}$ as a means of forecasting. The justification relies on the testable implications encapsulated in Equations~\eqref{eq:suff1} and~\eqref{eq:suff2}. As you point out in your report, a lot of relevant material used to justify this was left in the Appendix in the previous version of the paper. In this paper, we discuss the tests of these implications in Tables~\ref{table:invariance} and~\ref{table:invarianceerrors}. We also elaborate the magnitudes and the standard errors of the tests. The inference is not as precise as in Panel (a), but, as before, the coefficients associated with the relevant indicator are relatively small when compared with the average of the variable (average labor income in the experimental and non-experimental sample for males and females is $40,007$ and $24,584$ and  $32,717$ and $24,098$, respectively). Similar statements would hold for the complementary tests in Appendix~\ref{appendix:methodology}.
 
 \noindent \textbf{Referee 3. I don't understand how the paper deals with substitution bias. Perhaps it was discussed in one of the appendices (or in \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}) but I missed it. Please clarify what assumptions and data allow you to address this issue.}
 
-\noindent \textit{Response.} Thanks for asking for this clarification, which was missing in the previous draft. We now sidestep this issue by focusing the vast bulk of our analysis on treatment relative to next best. Substitution bias is an ancillary issue to our study because our main interest is to compare treatment to control. We now discuss it as a complementary but not a main result in Appendix~\ref{appendix:cbaresultscont} in the revised version. We acknowledge that dealing with substitution bias relies on further assumptions, which may congest the main messages of the paper.
+\noindent \textit{Response.} Thanks for asking for this clarification, which was missing in the previous draft. We now sidestep this issue by focusing the vast bulk of our analysis on treatment relative to next best. Substitution bias is an ancillary issue to our study because our main interest is comparing treatment to control. We now discuss substitution bias as a complementary but not a main result in Appendix~\ref{appendix:cbaresultscont} in the revised version. We acknowledge that dealing with substitution bias relies on further assumptions, which would congest the main messages of the paper.
 
 \noindent \textbf{Referee 3. How do you choose predictor variables? It needs to be able to predict a treatment effect, and so the predictor variable should be affected by treatment. I might be wrong but it doesn't look like you are using the subsample of predictors that are affected by treatment? Why not? Why does it make sense to include predictor variables not affected by treatment?}
 
-\noindent \textit{Response.} As detailed in Section~\ref{section:cbamethodology}, there are predictors not affected by treatment, $\bm{B}_k$, and predictors affected by treatment, $\bm{X}_{k,a}^d$. The former allow us to gain precision when identifying and estimating $\bm{\phi}$ in the auxiliary samples. We choose them to be the set of variables that are available across the two samples available at baseline in the experimental sample. The latter are the most important ones, as our whole methodology relies on them as ``mediators'' (inputs) of treatment production functions. That is precisely what is embedded in Assumption~\ref{ass:summary}. As detailed in Section~\ref{section:cbamethodology}, a variable is a predictor variable: (i) if it is available in the experimental and the non-experimental data; (ii) the support in the non- experimental data contains the support in the experimental data; (iii) mediates or causes labor income; and (iv) is affected by treatment. Section~\ref{section:cbamethodology} documents that these hold for the intermediate inputs that we use.
+\noindent \textit{Response.} As detailed in Section~\ref{section:cbamethodology}, there are predictors not affected by treatment, $\bm{B}_k$, and predictors affected by treatment, $\bm{X}_{k,a}^d$. The former allow us to gain precision when identifying and estimating $\bm{\phi}$ in the auxiliary samples. We choose them to be the set of variables that are available across the two samples available at baseline in the experimental sample. The latter are the most important ones, as our whole methodology relies on them as ``mediators'' (inputs) of treatment production functions. That is precisely what is embedded in Assumption~\ref{ass:summary}. As detailed in Section~\ref{section:cbamethodology}, a variable is a predictor variable: (i) if it is available in the experimental and the non-experimental data; (ii) the support in the non- experimental data contains the support in the experimental data; (iii) mediates or causes labor income; and (iv) is affected by treatment. Section~\ref{section:cbamethodology} documents that these hold for the intermediate inputs that we use. Note that the hypothesis of exogeneity is tested and not rejected.
 
 \noindent \textbf{Referee 3. What, if any, restrictions are there on the joint distribution of the predicted outcomes in a given period? Are, say, high earners also more likely to be healthy? What are the cross-equation restrictions in the forecasts?}
 
-\noindent \textit{Response.} This is an excellent point that we cannot exploit in our data. We explain the reason in Section~\ref{section:cbamethodology} and reproduce the explanation here. Our identification and estimation does not impose cross-sectional restrictions. That is, it does not identify and estimate the $\bm{\phi_{a}} \left( \bm{x}, \bm{b} \right)$ for all of our outcomes. This is a consequence of data restrictions. We use different datasets to identify and estimate the  $\bm{\phi_{a}} \left( \bm{x}, \bm{b} \right)$ for each outcome (i.e., labor income, health, crime). Thus, the predictor variables that we are able to use differ across outcomes and we cannot perform this estimation. This implies an efficiency loss because it impedes us from imposing cross-sectional restrictions across outcomes.
+\noindent \textit{Response.} This is an excellent point that we cannot implement in our data. We explain the reason in Section~\ref{section:cbamethodology} and reproduce the explanation here. Our identification and estimation does not impose cross-sectional restrictions. That is, it does not identify and estimate the $\bm{\phi_{a}} \left( \bm{x}, \bm{b} \right)$ for all of our outcomes. This is a consequence of data restrictions. We use different data sets to identify and estimate the  $\bm{\phi_{a}} \left( \bm{x}, \bm{b} \right)$ for each outcome (i.e., labor income, health, crime). Thus, the predictor variables that we are able to use differ across outcomes and we cannot perform this estimation. This implies an efficiency loss because it impedes us from imposing cross-sectional restrictions across outcomes.
 
 \noindent \textbf{Referee 3. Please clarify why one needs a randomized experiment if one is willing to make the assumptions you invoke (such as exogeneity of the predictor variables and structural invariance)? Why not just go to observational data where we can observe long-run outcomes and have a larger set of covariates to do the matching. What economic model or assumptions would invalidate such a matching procedure (which motivates why you look at social experiments), yet still be consistent with the assumptions you invoke? The paper should be clear about this.}
 
